--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas==1.4.0
-scipy
-scikit-learn
-tensorflow
-loadmat5
+streamlit==1.33.0
+pandas>=1.3.0
+scipy==1.7.3
+scikit-learn==0.24.2
+tensorflow==2.8.0
+loadmat5==0.1.1
